samples/_failures_safe/1761277347_42bc23_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_104e319b.c: In function ‘main’:
./samples/SAFE/__tmp_104e319b.c:151:9: error: expected declaration or statement at end of input
  151 |         }
      |         ^
./samples/SAFE/__tmp_104e319b.c:151:9: error: expected declaration or statement at end of input
